[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/npc/neutral/celestial/lesser_dot_hover.png" type="Texture" id=1]
[ext_resource path="res://assets/props/shadow/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://npc/neutral/celestial/Worker.gd" type="Script" id=3]
[ext_resource path="res://npc/states/WorkerStateMachine.gd" type="Script" id=4]
[ext_resource path="res://assets/npc/neutral/celestial/little_dot_portrait_x32.png" type="Texture" id=5]
[ext_resource path="res://npc/states/worker/Wander.gd" type="Script" id=6]
[ext_resource path="res://npc/states/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://target/TargetButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/shaders/Aura_AnimatedSprites.tres" type="Material" id=9]
[ext_resource path="res://npc/states/worker/Collect.gd" type="Script" id=10]
[ext_resource path="res://npc/states/worker/Idle.gd" type="Script" id=11]
[ext_resource path="res://npc/states/worker/Move.gd" type="Script" id=12]
[ext_resource path="res://npc/worker/WorkerResourceHitbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://npc/worker/WorkerLoadCapacity.tscn" type="PackedScene" id=14]
[ext_resource path="res://npc/states/worker/Return.gd" type="Script" id=15]
[ext_resource path="res://npc/states/worker/Seek.gd" type="Script" id=16]
[ext_resource path="res://npc/states/worker/Deliver.gd" type="Script" id=17]
[ext_resource path="res://npc/worker/WorkerResourceDeliveryHitbox.tscn" type="PackedScene" id=18]
[ext_resource path="res://npc/states/worker/ReturnCollect.gd" type="Script" id=19]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 3.0
height = 4.00001

[sub_resource type="CircleShape2D" id=11]
radius = 8.0

[sub_resource type="CircleShape2D" id=12]
radius = 10.0499

[sub_resource type="CircleShape2D" id=13]
radius = 158.003

[node name="Worker" type="KinematicBody2D" groups=["selectable", "worker"]]
input_pickable = true
script = ExtResource( 3 )

[node name="TargetButton" parent="." instance=ExtResource( 8 )]
margin_left = -9.0
margin_top = -25.0
margin_right = 10.0
margin_bottom = 5.0

[node name="TargetInfo" parent="TargetButton" index="0"]
portrait = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 9 )
position = Vector2( -15, -27 )
frames = SubResource( 9 )
frame = 7
speed_scale = 1.2
playing = true
centered = false

[node name="SmallShadow" type="Sprite" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]
wander_range = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 10 )

[node name="States" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Wander")

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="Wander" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Collect" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="Move" type="Node" parent="States"]
script = ExtResource( 12 )

[node name="Return" type="Node" parent="States"]
script = ExtResource( 15 )

[node name="Seek" type="Node" parent="States"]
script = ExtResource( 16 )

[node name="Deliver" type="Node" parent="States"]
script = ExtResource( 17 )

[node name="ReturnCollect" type="Node" parent="States"]
script = ExtResource( 19 )

[node name="WorkerResourceHitbox" parent="." instance=ExtResource( 13 )]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" parent="WorkerResourceHitbox" index="0"]
position = Vector2( 0, -2 )
shape = SubResource( 11 )

[node name="WorkerLoadCapacity" parent="." instance=ExtResource( 14 )]
maxResourceLoad = 20

[node name="WorkerResourceDeliveryHitbox" parent="." instance=ExtResource( 18 )]

[node name="CollisionShape2D" parent="WorkerResourceDeliveryHitbox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 12 )

[node name="LoadOutTimer" type="Timer" parent="."]
one_shot = true

[node name="ResourceDetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 256
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResourceDetectionZone"]
shape = SubResource( 13 )

[node name="SeekTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="input_event" from="." to="." method="_on_LittleDot_input_event"]
[connection signal="pressed" from="TargetButton" to="." method="_on_TargetButton_pressed"]
[connection signal="area_entered" from="WorkerResourceHitbox" to="." method="_on_WorkerResourceHitbox_area_entered"]
[connection signal="area_exited" from="WorkerResourceHitbox" to="." method="_on_WorkerResourceHitbox_area_exited"]
[connection signal="is_full" from="WorkerLoadCapacity" to="." method="_on_WorkerLoadCapacity_is_full"]
[connection signal="load_changed" from="WorkerLoadCapacity" to="." method="_on_WorkerLoadCapacity_load_changed"]
[connection signal="area_entered" from="WorkerResourceDeliveryHitbox" to="." method="_on_WorkerResourceDeliveryHitbox_area_entered"]
[connection signal="timeout" from="LoadOutTimer" to="." method="_on_LoadOutTimer_timeout"]
[connection signal="timeout" from="SeekTimer" to="." method="_on_SeekTimer_timeout"]

[editable path="TargetButton"]
[editable path="WorkerResourceHitbox"]
[editable path="WorkerResourceDeliveryHitbox"]
